# RobotArm

./: build_and_source.bash  readme.md
install/: local_setup.sh  setup.sh
install/launch_ur5/share/launch_ur5/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/launch_ur5/share/launch_ur5/cmake/: launch_ur5Config.cmake
install/launch_ur5/share/launch_ur5/launch/: ur5_bringup.launch.py
install/ur5_moveit_config/share/ur5_moveit_config/: local_setup.sh  package.sh
install/ur5_moveit_config/share/ur5_moveit_config/config/: ur5_robot.ros2_control.xacro
install/ur5_robot/share/ur5_robot/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/launch_ur5/: CMakeLists.txt  package.xml
src/moveit_python_api/: CMakeLists.txt  package.xml
src/moveit_python_api/launch/: test_api.launch.py
src/ur5_moveit_config/: .setup_assistant  package.xml
src/ur5_moveit_config/config/: initial_positions.yaml  ur5_robot.srdf  ur5_robot.urdf.xacro
src/ur5_robot/: CMakeLists.txt
